# django-taggit-anywhere

./: CHANGES.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
example/: initial_data.json  requirements.txt  settings.py  urls.py
example/tags/: models.py
example/tags/migrations/: 0001_initial.py
taggit_anywhere/: __init__.py  admin.py  apps.py
